--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ img{
 #texto_principal{
     background-color: rgb(180, 1, 1);
     color:white;
+    padding: 2px;
     max-width: 1000px;
     font-size: 50px;
     text-align: center;
